# holodeck-gemini

./: .env.example  .gitignore  .mcp.json  CLAUDE.MD  README.md  README_EN.md  pyproject.toml  start_web.bat
.claude/: settings.local.json
.gemini/: plugin.json
docs/: 3D_ASSET_FIX_README.md  APIYI_INTEGRATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  BLENDER_MCP_FIX_SUMMARY.md  CLIENT_REFACTORING_SUMMARY.md  CUSTOM_VLM_MODELS.md  DEPLOYMENT_GUIDE.md  EDITING_MODULE_SUMMARY.md  ENVIRONMENT_VARIABLE_INTEGRATION.md  ERROR_CODES.md  ERROR_CONTRACT_IMPLEMENTATION.md  FINAL_TEST_ANALYSIS.md  FINAL_VERIFICATION.md  GITHUB_UPLOAD_STATUS.md  GITHUB_UPLOAD_SUMMARY.md  HUNYUAN_3D_INTEGRATION_COMPLETE.md  HUNYUAN_INTEGRATION_SUMMARY.md  IMAGE_GENERATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.md.backup  PROMPT_TEMPLATE_READY.md  QUALITY_ASSURANCE.md  README_HUNYUAN_3D.md  README_VLM_IMPLEMENTATION.md  REFACTORING_COMPLETION_SUMMARY.md  SCENE_ANALYZER_REFACTORING_DOCUMENTATION.md  STAGED_CLI_GUIDE.md  STANDARDIZED_PROMPT_INTEGRATION_SUMMARY.md  STANDARDIZED_PROMPT_TEMPLATES.md  STANDARD_FORMATS.md  TEST_CASE.md  TEST_RESULTS_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  UNIFIED_VLM_IMPLEMENTATION.md  UPLOAD_README.md  USER_GUIDE.md  VISUAL_LLM_REFACTORING_PLAN.md  (+7 more)
examples/: apiyi_config_example.yaml  apiyi_demo.py  custom_vlm_demo.py  custom_vlm_with_env_vars.py  enhanced_services_example.py  error_handling_demo.py  hunyuan_3d_integration_example.py  hunyuan_3d_pipeline_example.py  hunyuan_image_demo.py  (+8 more)
(+214 files in other folders)
